...
      <Tab.Screen
        name={MainTabsScreenNames.Search}
        component={SearchScreen}
        options={{
          tabBarLabel: 'Buscar',
          tabBarAccessibilityLabel: 'Aba Buscar filmes',
          tabBarButtonTestID: 'tab-search',
          tabBarIcon: ({ color }) => <TabIcon symbol="🔍" color={color} />,
        }}
      />
      <Tab.Screen
        name={MainTabsScreenNames.Favorites}
        component={FavoritesScreen}
...
